--- a/Content/Site.css
+++ b/Content/Site.css
@@ -30,6 +30,14 @@ body {
     background-color: black;
 }
 
-.brawler-font {
-    font-family: 'Brawler';
+.brawler-regular {
+    font-family: "Brawler", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.brawler-bold {
+    font-family: "Brawler", serif;
+    font-weight: 700;
+    font-style: normal;
 }
