--- a/Site.Master
+++ b/Site.Master
@@ -14,7 +14,9 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="'https://fonts.googleapis.com/css?family=Brawler'" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Brawler:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <form runat="server">
@@ -45,12 +47,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-inline-flex justify-content-end">
-                    <ul class="navbar-nav font-brawler">
-                        <li class="nav-item"><a class="nav-link text-light mx-2" runat="server" href="~/">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link text-light mx-2" runat="server" href="~/About">ABOUT</a></li>
-                        <li class="nav-item"><a class="nav-link text-light mx-2" runat="server" href="~/Contact">CONTACT</a></li>
-                        <li class="nav-item"><a class="btn btn-dark rounded-0 mx-3" href="#">REGISTER</a></li>
-                        <li class="nav-item"><a class="btn btn-light rounded-0 text-dark" href="#">LOGIN</a></li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/About">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/Contact">CONTACT</a></li>
+                        <li class="nav-item"><a class="btn btn-dark rounded-0 mx-3 brawler-regular" href="#">REGISTER</a></li>
+                        <li class="nav-item"><a class="btn btn-light rounded-0 text-dark brawler-regular" href="#">LOGIN</a></li>
                     </ul>
                 </div>
             </div>
