--- a/Site.Master
+++ b/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - ForumsUnknown</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -61,14 +61,14 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
+            <footer class="mt-5">
                 <div class="text-white">
                     <div class="d-flex justify-content-end">
                         <a href="#" class="mx-4 text-white text-decoration-none">Terms & conditions</a>
                         <a href="#" class="text-white text-decoration-none">Privacy policy</a>
                     </div>
                 </div>
-                <p class="text-center text-white">&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p class="text-center text-white">&copy; <%: DateTime.Now.Year %> - ForumsUnknown</p>
             </footer>
         </div>
     </form>
