--- a/Site.Master
+++ b/Site.Master
@@ -49,10 +49,19 @@
                 <div class="collapse navbar-collapse d-inline-flex justify-content-end">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/About">ABOUT</a></li>
-                        <li class="nav-item"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/Contact">CONTACT</a></li>
-                        <li class="nav-item"><a class="btn btn-dark rounded-0 mx-3 brawler-regular" runat="server" href="~/Register">REGISTER</a></li>
-                        <li class="nav-item"><a class="btn btn-light rounded-0 text-dark brawler-regular" runat="server" href="~/Login">LOGIN</a></li>
+                        <li class="nav-item" id="navbarAbout" runat="server"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/About">ABOUT</a></li>
+                        <li class="nav-item" id="navbarContact" runat="server"><a class="nav-link text-light mx-2 brawler-regular" runat="server" href="~/Contact">CONTACT</a></li>
+                        <li class="nav-item" id="loginItem" runat="server"><a class="btn btn-dark rounded-0 mx-3 brawler-regular" runat="server" href="~/Register">REGISTER</a></li>
+                        <li class="nav-item" id="registerItem" runat="server"><a class="btn btn-light rounded-0 text-dark brawler-regular" runat="server" href="~/Login">LOGIN</a></li>
+                        <li class="nav-item" runat="server">
+                            <asp:Button ID="createPostBtn" runat="server" Text="+CREATE" CssClass="btn btn-outline-light" OnClick="BtnCreatePost_Click"/>
+                        </li>
+                        <li>
+                            <a id="welcomeLink" runat="server" href="~/Profile" class="btn btn-dark text-light mx-2 brawler-regular">
+                                Welcome, <span id="welcomeUsername" runat="server" class="text-danger"></span>
+                            </a>
+                            <asp:Button ID="logoutBtn" runat="server" Text="LOGOUT" CssClass="btn btn-sm btn-outline-danger" OnClick="BtnLogout_Click" />
+                        </li>
                     </ul>
                 </div>
             </div>
